fixed an error in site design saving function on IE alert pop-up design change
git-svn-id: http://xe-core.googlecode.com/svn/branches/maserati@12606 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/modules/admin/tpl/css/admin.css
+++ b/modules/admin/tpl/css/admin.css
@@ -191,7 +191,9 @@ body>.x,
 .x_modal._common {width:600px;margin-left:-300px}
 .x_modal._common._small{width:400px;margin-left:-200px}
 .x_modal._common._nobody .x_modal-body,
+.x_modal._common._type_alert .x_modal-header,
 .x_modal._common._type_alert ._cancel{display:none}
+.x_modal._common._type_alert .x_modal-body{border-radius:6px 6px 0 0;}
 .x_modal._common._nobody .x_modal-footer{border-top:0}
 .x_modal-body.showTree .moveList{float:left;width:60%}
 .x_modal-body.showTree .moveTree{display:block !important;float:right;width:38%}
